--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_review.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_review.yml
@@ -373,7 +373,7 @@ review:
       , ${currency(users[0].gross_income)}.
       % endif
 ---
-generic object: PeopleList
+generic object: ALPeopleList
 table: x.name_table
 rows: x
 columns:
