--- a/docassemble/MA209AProtectiveOrder/data/questions/209a_package.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209a_package.yml
@@ -53,12 +53,9 @@ code: |
 scan for variables: False
 mandatory: True
 code: |
-  package_version_number  # Ensure the package version number is defined so available for show_id.js
-
   set_interview_defaults # Set some things that are true on any 209A
   
   ##################### Intro screen
-  DEBUG_aldocument 
   al_intro_screen
   main_209A_package_intro
   nav.set_section('section_basic')  
@@ -68,11 +65,8 @@ code: |
     plaintiff_assistant_relationship_to_plaintiff
   # plaintiff_is_major_yes # Ask for age
   if plaintiff_is_major_yes: # Plaintiff over 18
-    plaintiff_is_major_no = False
-    # plaintiff_assistant_name = DAEmpty()
     plaintiff_assistant_relationship_to_plaintiff = DAEmpty()   
   else: # if not over 18
-    plaintiff_is_major_no = True
     if who_protecting_screener == 'someone else':
       if plaintiff_assistant_relationship_to_plaintiff not in ('parent', 'guardian','advocate'):
         refer_to_advocate
@@ -194,7 +188,6 @@ code: |
   # Other cases involving P/D but not about the children
   nav.set_section('section_cases_with_defendant')
   other_cases.gather()
-  cases_other_safe_for_pdf
   plaintiff_and_defendant_other_case_description
 
   nav.set_section('section_court')
@@ -220,9 +213,7 @@ code: |
   basic_questions_signature_flow
   users[0].signature
   
-  final_attachment_bundle
   nav.set_section('section_filing')
-  final_attachment_collection.finished
   download_screen
 ---
 sets:
@@ -255,7 +246,7 @@ subquestion: |
   Remember to come back to this screen to sign and download
   your final set of forms.
 
-  ${pdf_concatenate(final_attachment_preview, filename="209a_preview.pdf")}
+  ${ al_user_bundle.as_pdf(key='preview') }
 
   Tap ${word("Next")} when you are ready to sign.
 field: preview_209a_package
@@ -265,8 +256,6 @@ code: |
   after_hours = ((current_datetime() > current_datetime().replace(hour=16,minute=30)) or (current_datetime() < current_datetime().replace(hour=8,minute=30)) )
   court_closed_today = (today().dow > 5)
 ---
-reconsider:
-  - final_attachment_bundle
 id: download
 question: |
   Your forms are ready to download and file
@@ -274,7 +263,7 @@ subquestion: |
   1. Look over the forms below.
   1. If they look correct, download them or email them to yourself.
   1. You still need to deliver them to the ${trial_court}, when you are ready.
-  4. Call the ${trial_court}'s clerk: <a href="tel:${trial_court.phone}">${trial_court.phone}</a> to find out how they want you to send your forms to them.
+  4. Call the ${trial_court}'s clerk: ${tel(trial_court.phone) } to find out how they want you to send your forms to them.
   % if court_closed_today:
   4. The court is closed today. If you need help to file these forms now, call your local police station.
   % elif after_hours:
@@ -283,9 +272,13 @@ subquestion: |
   6. Your hearing will probably be over the phone or Zoom video conference.  
      The address of your court, if you need it, is: ${trial_court.address.on_one_line()}.  
 
-  ${pdf_concatenate(final_attachment_bundle, filename="209a_petition.pdf")} 
+  [Download as one PDF, for printing](  ${ al_user_bundle.as_pdf().url_for() } )
+
+  ${ al_user_bundle.download_list_html() }
+
+  ${ al_user_bundle.send_button_html() }
+
 event: download_screen  
-attachment code: final_attachment_collection
 ---
 comment: |
   ${action_button_html(url_action('review_all_sections'), icon='edit', label=word("Make changes"))}
@@ -353,113 +346,6 @@ terms:
   - true to the best of your knowledge: |
       Something is true "to the best of your knowledge" if you were there and saw, heard, or felt it.  
       Something is true to the best of your knowledge if you have good reason to believe it is true.
----
-######################################
-# BEGIN placeholder documents
-# TODO: iteratively switch to ALDocument, use placeholders here for now
----
-continue button field: DEBUG_aldocument
-question: |
-  Debug a form quickly
-subquestion: |
-  Preview:
-  ${ affidavit_of_care_or_custody_attachment.as_pdf(key='preview') }
-
-  Final:
-  ${ affidavit_of_care_or_custody_attachment.as_pdf(key='final')}
----
-code: |
-  aff_of_care_final = affidavit_of_care_or_custody_attachment.as_pdf(key='final')
-  exhibit_attachment_preview = exhibit_attachment.as_pdf(key='preview')
-  exhibit_attachment_final = exhibit_attachment.as_pdf(key='final')
-  motion_to_impound_final = FAHA8_motion_to_impound_attachment.as_pdf(key='final')
-  defendant_info_final = GL209A_defendant_information_attachment.as_pdf(key='final')
-  child_support_final = FA11_child_support_affidavit_attachment.as_pdf(key='final')
-  page_2_final = GL209A_page2_attachment.as_pdf(key='final')
-  plaintiff_confidential_final = GL209A_plaintiff_confidential_info_attachment.as_pdf(key='final')
-
-  page1_final = GL209A_page1_attachment.as_pdf(key='final')
-  affidavit_final = GL209A_affidavit_attachment.as_pdf(key='final')
----
-code: |
-  aff_of_care_preview = affidavit_of_care_or_custody_attachment.as_pdf(key='preview')
-
-  motion_to_impound_preview = FAHA8_motion_to_impound_attachment.as_pdf(key='preview')
-  defendant_info_preview = GL209A_defendant_information_attachment.as_pdf(key='preview')
-  child_support_preview = FA11_child_support_affidavit_attachment.as_pdf(key='preview')
-  page_2_preview = GL209A_page2_attachment.as_pdf(key='preview')
-  plaintiff_confidential_preview = GL209A_plaintiff_confidential_info_attachment.as_pdf(key='preview')
-
-  page1_preview = GL209A_page1_attachment.as_pdf(key='preview')
-  affidavit_preview = GL209A_affidavit_attachment.as_pdf(key='preview')
----
-#######################################
-# END placeholder documents
-#######################################
----
-reconsider: True
-code: |
-  attachment_temp = []  
-  # Build the 209A package. Up to 8 total forms
-  # Page 1: complaint_209A_labeled_page10003_attachment
-  #     page1_addendum
-  # Complaint Affidavit: complaint_209A_Affidavit_attachment
-  #     affidavit_addendum, triggered by addAddendum_affidavit
-  # Page 2: A_complaint_for_protection_from_abuse_probation_copy0005_attachment
-  #     page2_addendum, triggered by addAddendum_page2
-  # Child support: Plaintiff_Affidavit_in_support_of_request_for_child_support_order0008_attachment
-  # Affidavit care/custody: A_affidavit_disclosing_care_or_custody_proceedings0009_attachment 
-  #     care_or_custody_proceedings_appendix_variable, triggered by need_care_custody_addendum
-  # Plaintiff info: A_Plaintiff_Confidential_Information0011_attachment
-  #     confidential_info_addendum
-  # Defendant info: defendantinformation209A0008_attachment
-  #    defendant_addendum
-  # motion to impound: a_258e_motion_for_impoundment0019_attachment
-  #    impound_addendum
-  
-  # always include cover page for user
-  attachment_temp.append(next_steps)
-  # Always include page 1 
-  attachment_temp.append(page1_final)
-  attachment_temp.append( affidavit_final )
-  # include page 2 only if there are children
-  if plaintiff_has_minor_children: 
-    attachment_temp.append( page_2_final )
-    if defendant_and_plaintiff_are_parents_of_child and len(children_of_both) and have_had_custody_cases :
-      attachment_temp.append(aff_of_care_final)
-    
-  if plaintiff_has_minor_children and defendant_and_plaintiff_are_parents_of_child and len(children_of_both) and wants_child_support_yes and not existing_order:
-    attachment_temp.append( child_support_final)
-  attachment_temp.append(plaintiff_confidential_final)
-  attachment_temp.append(defendant_info_final)
-  if asked_for_impoundment:
-    attachment_temp.append(motion_to_impound_final)
-  if has_evidence and has_evidence_ready_to_upload and len(exhibits):
-    attachment_temp.append(exhibit_attachment_final)
-  final_attachment_bundle = attachment_temp
----
-reconsider: True
-code: |
-  # PREVIEW version of the attachment
-  attachment_preview_temp = []  
-  # Always include page 1 
-  attachment_preview_temp.append(page1_preview)
-  attachment_preview_temp.append( affidavit_preview )
-  # include page 2 only if there are children
-  if plaintiff_has_minor_children: 
-    attachment_preview_temp.append( page_2_preview )
-    if defendant_and_plaintiff_are_parents_of_child and len(children_of_both) and have_had_custody_cases:
-      attachment_preview_temp.append(aff_of_care_preview)
-    
-  if plaintiff_has_minor_children and defendant_and_plaintiff_are_parents_of_child and len(children_of_both) and not existing_order and wants_child_support_yes:
-    attachment_preview_temp.append( child_support_preview)
-  attachment_preview_temp.append(plaintiff_confidential_preview)
-  attachment_preview_temp.append(defendant_info_preview)
-  if asked_for_impoundment:
-    attachment_preview_temp.append(motion_to_impound_preview)
-  if has_evidence and has_evidence_ready_to_upload and len(exhibits):
-    attachment_preview_temp.append(exhibit_attachment_preview)
-  final_attachment_preview = attachment_preview_temp
 ---
 depends on: 
   - abuser_caused_plaintiff_to_leave_home
@@ -675,19 +561,52 @@ right: |
   % endif    
 ---
 objects:
-  - final_attachment_collection: DAFileCollection
+  - next_steps: ALDocument.using(title="Next Steps",
+                                 filename="next_steps",
+                                 has_addendum=False,
+                                 enabled=True)  
 ---
-code: |
-  final_attachment_collection.pdf = pdf_concatenate(final_attachment_bundle)
-  final_attachment_collection.info = {'name': '209A (Abuse Prevention Order/Restraining Order) Application', 
-                      'filename': '209a_restraining_order_application',
-                      'description': '',
-                      'file': {'pdf': final_attachment_collection.pdf.number},
-                      'mimetype': {'pdf': final_attachment_collection.pdf.mimetype}
-                      }
-  final_attachment_collection.finished = True
----
-reconsider: True
 attachment: 
   docx template file: 209A_next_steps_for_user.docx
-  variable name: next_steps
+  variable name: next_steps[i]
+
+---
+objects:
+  - al_user_bundle: ALDocumentBundle.using(elements=[
+      next_steps,
+      GL209A_page1_attachment,
+      GL209A_affidavit_attachment,
+      GL209A_page2_attachment,
+      FA11_child_support_affidavit_attachment,
+      affidavit_of_care_or_custody_attachment,
+      GL209A_plaintiff_confidential_info_attachment,
+      GL209A_defendant_information_attachment,
+      FAHA8_motion_to_impound_attachment,
+      exhibit_attachment,
+      ], title="Your 209A Petition", filename="209A_petition_bundle.pdf")
+  - al_court_bundle: ALDocumentBundle.using(elements=[
+      GL209A_page1_attachment,
+      GL209A_affidavit_attachment,
+      GL209A_page2_attachment,
+      FA11_child_support_affidavit_attachment,
+      affidavit_of_care_or_custody_attachment,
+      GL209A_plaintiff_confidential_info_attachment,
+      GL209A_defendant_information_attachment,
+      FAHA8_motion_to_impound_attachment,
+      exhibit_attachment,
+      ], title="Your 209A Petition", filename="209A_petition_bundle.pdf")
+---
+code: |
+  GL209A_page2_attachment.enabled = plaintiff_has_minor_children
+---
+code: |
+  affidavit_of_care_or_custody_attachment.enabled = defendant_and_plaintiff_are_parents_of_child and len(children_of_both) and have_had_custody_cases
+---
+code: |
+  FA11_child_support_affidavit_attachment.enabled = plaintiff_has_minor_children and defendant_and_plaintiff_are_parents_of_child and len(children_of_both) and not existing_order and wants_child_support_yes
+---
+code: |
+  FAHA8_motion_to_impound_attachment.enabled = asked_for_impoundment
+---
+code: |
+  exhibit_attachment.enabled = has_evidence and has_evidence_ready_to_upload and len(exhibits)
