--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_page_2.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_page_2.yml
@@ -234,8 +234,9 @@ id: number_of_own_children_under_18
 question: |
   The court needs to know if you have any children under 18
 subquestion: |
-  This includes 
+  This includes: 
   % if defendant_and_plaintiff_are_parents_of_child:
+  
   * children you have with ${other_parties.familiar()} who are under 18, as well as
   * 
   % endif  
