--- a/docassemble/MA209AProtectiveOrder/data/questions/209a_package.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209a_package.yml
@@ -246,7 +246,7 @@ subquestion: |
   Remember to come back to this screen to sign and download
   your final set of forms.
 
-  ${ al_user_bundle.as_pdf(key='preview') }
+  ${ al_court_bundle.as_pdf(key='preview') }
 
   Tap ${word("Next")} when you are ready to sign.
 field: preview_209a_package
@@ -272,9 +272,7 @@ subquestion: |
   6. Your hearing will probably be over the phone or Zoom video conference.  
      The address of your court, if you need it, is: ${trial_court.address.on_one_line()}.  
 
-  [Download as one PDF, for printing](  ${ al_user_bundle.as_pdf().url_for() } )
-
-  ${ al_user_bundle.download_list_html() }
+  ${ al_user_bundle.as_pdf() }
 
   ${ al_user_bundle.send_button_html() }
 
